# reading-list

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
rl_build_utils/: Cargo.toml
rl_build_utils/src/: lib.rs
rl_cli/: Cargo.toml  build.rs
rl_cli/src/: autocompletion.rs  bookmark_autocompletion.rs  handlers.rs  main.rs  validators.rs
rl_db/: Cargo.toml
rl_db/src/: lib.rs
rl_shared/: Cargo.toml  build.rs
rl_shared/src/: bookmark.rs  config.rs  context.rs  database.rs  lib.rs
rl_utils/: Cargo.toml
rl_utils/src/: lib.rs
rl_web/: Cargo.toml
