[package]
name = "rl_shared"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
rusqlite = { version = "0.39.0", features = ["bundled", "chrono"] }

[build-dependencies]
rl_build_utils = { path = "../rl_build_utils" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(app_env, values("dev"))'] }